# test-automation-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  requirements.txt  run_tests.sh
.github/workflows/: test.yml
apis/: base_api.py  user_api.py
config/: dev.yaml  prod.yaml  staging.yaml
core/: __init__.py  config_loader.py  data_provider.py  http_client.py  logger.py
data/api/: users.yaml
data/mobile/: test_data.yaml
data/web/: users.yaml
docs/superpowers/plans/: 2026-06-24-test-automation-framework.md
docs/superpowers/specs/: 2026-06-24-test-automation-framework-design.md
fixtures/: auth_fixtures.py
pages/: base_page.py  login_page.py
screens/: base_screen.py  home_screen.py
tests/: conftest.py  test_skeleton.py
tests/api/: conftest.py  test_user.py
tests/mobile/: conftest.py  test_home.py
tests/web/: conftest.py  test_login.py
